--- a/meetorra_test/task_3.html
+++ b/meetorra_test/task_3.html
@@ -12,8 +12,8 @@
     <!-- Для третьего задания необходим файл task_3.css -->
     <nav>
         <ul class="horizontal__menu">
-            <li data-id="home"><a href="#">Home</a></li>
-            <li data-id="documents"><a href="#">Documents</a>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">Documents</a>
                  <!-- Первый уровень выпадающего списка -->
 			    <ul>
 			        <li><a href="#">1</a></li>
@@ -28,7 +28,7 @@
                     </li>
 			    </ul>
             </li>
-            <li data-id="photo"><a href="#">Photo</a>
+            <li><a href="#">Photo</a>
                 <ul>
 			        <li><a href="#">1</a>
                         <ul>
@@ -59,7 +59,7 @@
                     </li>
 			    </ul>
             </li>
-            <li data-id="video"><a href="#">Video</a>
+            <li><a href="#">Video</a>
                 <ul>
 			        <li><a href="#">1</a>
                         <ul>
@@ -84,7 +84,7 @@
                     </li>
 			    </ul>
             </li>
-            <li data-id="requisites"><a href="#">Requisites</a></li>
+            <li><a href="#">Requisites</a></li>
         </ul>
     </nav>
 </body>
